// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using VictuzWeb.Persistence;

#nullable disable

namespace VictuzWeb.Migrations
{
    [DbContext(typeof(VictuzWebDatabaseContext))]
    [Migration("20241109154425_IsMember")]
    partial class IsMember
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.10")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("SuggestionLike", b =>
                {
                    b.Property<long>("SuggestionId")
                        .HasColumnType("bigint");

                    b.Property<long>("UserId")
                        .HasColumnType("bigint");

                    b.HasKey("SuggestionId", "UserId");

                    b.HasIndex("UserId");

                    b.ToTable("SuggestionLike");
                });

            modelBuilder.Entity("UserGathering", b =>
                {
                    b.Property<long>("GatheringIdentifier")
                        .HasColumnType("bigint");

                    b.Property<long>("UsersIdentifier")
                        .HasColumnType("bigint");

                    b.HasKey("GatheringIdentifier", "UsersIdentifier");

                    b.HasIndex("UsersIdentifier");

                    b.ToTable("UserGathering");
                });

            modelBuilder.Entity("VictuzWeb.Models.Club", b =>
                {
                    b.Property<long>("Identifier")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<long>("Identifier"));

                    b.Property<bool>("Accepted")
                        .HasColumnType("bit");

                    b.Property<DateTime?>("CreatedAt")
                        .ValueGeneratedOnAddOrUpdate()
                        .HasColumnType("datetime2");

                    b.Property<string>("Image")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<long>("OwnerIdentifier")
                        .HasColumnType("bigint");

                    b.HasKey("Identifier");

                    b.HasIndex("OwnerIdentifier");

                    b.ToTable("Clubs");
                });

            modelBuilder.Entity("VictuzWeb.Models.Role", b =>
                {
                    b.Property<long>("Identifier")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<long>("Identifier"));

                    b.Property<DateTime?>("CreatedAt")
                        .ValueGeneratedOnAddOrUpdate()
                        .HasColumnType("datetime2");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Identifier");

                    b.ToTable("Roles");

                    b.HasData(
                        new
                        {
                            Identifier = 1L,
                            Name = "User"
                        },
                        new
                        {
                            Identifier = 2L,
                            Name = "Admin"
                        });
                });

            modelBuilder.Entity("VictuzWeb.Models.Suggestion", b =>
                {
                    b.Property<long>("Identifier")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<long>("Identifier"));

                    b.Property<DateTime?>("CreatedAt")
                        .ValueGeneratedOnAddOrUpdate()
                        .HasColumnType("datetime2");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Discriminator")
                        .IsRequired()
                        .HasMaxLength(13)
                        .HasColumnType("nvarchar(13)");

                    b.Property<string>("Image")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<long>("SuggestedByIdentifier")
                        .HasColumnType("bigint");

                    b.HasKey("Identifier");

                    b.HasIndex("SuggestedByIdentifier");

                    b.ToTable("Suggestions");

                    b.HasDiscriminator().HasValue("Suggestion");

                    b.UseTphMappingStrategy();
                });

            modelBuilder.Entity("VictuzWeb.Models.User", b =>
                {
                    b.Property<long>("Identifier")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<long>("Identifier"));

                    b.Property<DateOnly>("BirthDate")
                        .HasColumnType("date");

                    b.Property<DateTime?>("CreatedAt")
                        .ValueGeneratedOnAddOrUpdate()
                        .HasColumnType("datetime2");

                    b.Property<string>("Firstname")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<bool>("IsMember")
                        .HasColumnType("bit");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<long>("RoleIdentifier")
                        .HasColumnType("bigint");

                    b.Property<string>("Surname")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Username")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Identifier");

                    b.HasIndex("RoleIdentifier");

                    b.ToTable("Users");

                    b.HasData(
                        new
                        {
                            Identifier = 1L,
                            BirthDate = new DateOnly(2004, 11, 9),
                            Firstname = "Nicky",
                            IsMember = true,
                            PasswordHash = "password123",
                            RoleIdentifier = 1L,
                            Surname = "Jaspers",
                            Username = "GigaChad"
                        },
                        new
                        {
                            Identifier = 2L,
                            BirthDate = new DateOnly(2004, 11, 9),
                            Firstname = "Miel",
                            IsMember = true,
                            PasswordHash = "password123456",
                            RoleIdentifier = 2L,
                            Surname = "Noelanders",
                            Username = "MielTheKing"
                        });
                });

            modelBuilder.Entity("VictuzWeb.Models.Gathering", b =>
                {
                    b.HasBaseType("VictuzWeb.Models.Suggestion");

                    b.Property<DateTime>("BeginDateTime")
                        .HasColumnType("datetime2");

                    b.Property<DateOnly>("DeadlineDate")
                        .HasColumnType("date");

                    b.Property<DateTime>("EndDateTime")
                        .HasColumnType("datetime2");

                    b.Property<bool>("IsMemberOnly")
                        .HasColumnType("bit");

                    b.Property<long>("MaxUsers")
                        .HasColumnType("bigint");

                    b.HasDiscriminator().HasValue("Gathering");
                });

            modelBuilder.Entity("SuggestionLike", b =>
                {
                    b.HasOne("VictuzWeb.Models.Suggestion", null)
                        .WithMany()
                        .HasForeignKey("SuggestionId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("VictuzWeb.Models.User", null)
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();
                });

            modelBuilder.Entity("UserGathering", b =>
                {
                    b.HasOne("VictuzWeb.Models.Gathering", null)
                        .WithMany()
                        .HasForeignKey("GatheringIdentifier")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("VictuzWeb.Models.User", null)
                        .WithMany()
                        .HasForeignKey("UsersIdentifier")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();
                });

            modelBuilder.Entity("VictuzWeb.Models.Club", b =>
                {
                    b.HasOne("VictuzWeb.Models.User", "Owner")
                        .WithMany("OwnerOf")
                        .HasForeignKey("OwnerIdentifier")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Owner");
                });

            modelBuilder.Entity("VictuzWeb.Models.Suggestion", b =>
                {
                    b.HasOne("VictuzWeb.Models.User", "SuggestedBy")
                        .WithMany("Suggestions")
                        .HasForeignKey("SuggestedByIdentifier")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("SuggestedBy");
                });

            modelBuilder.Entity("VictuzWeb.Models.User", b =>
                {
                    b.HasOne("VictuzWeb.Models.Role", "Role")
                        .WithMany("UsersWithRole")
                        .HasForeignKey("RoleIdentifier")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Role");
                });

            modelBuilder.Entity("VictuzWeb.Models.Role", b =>
                {
                    b.Navigation("UsersWithRole");
                });

            modelBuilder.Entity("VictuzWeb.Models.User", b =>
                {
                    b.Navigation("OwnerOf");

                    b.Navigation("Suggestions");
                });
#pragma warning restore 612, 618
        }
    }
}
